compiler/testData/diagnostics/tests/FunctionCalleeExpressions.kt
fun test() {
    <!MISSING_RECEIVER!>(fun Int.() = 1)<!>()
}
